[project]
name = "mcp-create-user"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pylint>=3.3.6",
    "python-dotenv>=1.1.0",
]
[tool.ruff]
#https://docs.astral.sh/ruff/rules/#pyflakes-f
#https://docs.astral.sh/ruff/rules/#error-e
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
# e101: Indentation contains mixed spaces and tabs
# e501: Line too long ({width} > {limit})
ignore = ["E501", "E101"]
